<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/act1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginBottom="25dp"
        android:fontFamily="monospace"
        android:text="@string/what_are_you_waiting_for"
        android:textColor="#6600CC"
        android:textSize="22sp"
        app:layout_constraintBottom_toTopOf="@+id/mainb"
        app:layout_constraintEnd_toEndOf="@+id/mainb"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="@+id/mainb"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/mainb"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/act1"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="25dp"
        android:background="#5C00CC"
        android:onClick="openActivity"
        android:text="@string/i_have_a_dream"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/profileb"
        app:layout_constraintEnd_toEndOf="@+id/profileb"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="@+id/profileb"
        app:layout_constraintTop_toBottomOf="@+id/act1" />

    <Button
        android:id="@+id/profileb"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/mainb"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="40dp"
        android:onClick="openActivity"
        android:text="@string/profile"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainb" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="305dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:fontFamily="monospace"
        android:gravity="center"
        android:text="@string/description_main"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/act1"
        app:layout_constraintEnd_toEndOf="@+id/act1"
        app:layout_constraintHorizontal_bias="0.528"
        app:layout_constraintStart_toStartOf="@+id/act1"
        app:layout_constraintTop_toBottomOf="@+id/logo" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="214dp"
        android:layout_height="205dp"
        android:layout_marginTop="75dp"
        android:layout_marginBottom="35dp"
        android:contentDescription="logo"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintHorizontal_bias="0.483"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/nt" />


</androidx.constraintlayout.widget.ConstraintLayout>